crates/keron-lang/tests/corpus/errors/parse/for_no_body.keron
val xs: List<Int> = [1, 2]
for x in xs
